--- a/package.yaml
+++ b/package.yaml
@@ -1,5 +1,5 @@
 name:                fuzzy-dates
-version:             0.1.0.0
+version:             0.1.0.1
 github:              "ReedOei/fuzzy-dates"
 license:             BSD3
 author:              "Reed Oei"
@@ -11,8 +11,8 @@ extra-source-files:
 - ChangeLog.md
 
 # Metadata used when publishing your package
-# synopsis:            Short description of your package
-# category:            Web
+synopsis:            Libary for parsing dates in strings in varied formats.
+category:            Parsing
 
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
